--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mortgage Repayment Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="main-panel">
+        <div id="left-panel">
+            <form action="#">
+                <div id="left-title" class="plus-jakarta-sans-500">
+                    <h2>Mortgage Calculator</h2>
+                    <p> Clear All</p>
+                </div>
+            </form>
+        </div>
+        <div id="right-panel"></div>
+    </div>
 </body>
 </html>
